<resources>
    <string name="app_name">CityPointECGM</string>
    <string name="user" translatable="false">User Name</string>
    <string name="pass" translatable="false">Password</string>
    <string name="inf1" translatable="false">example</string>
    <string name="btlogin" translatable="false">Login</string>
    <string name="btnote" translatable="false">Personal Notes</string>
    <string name="txtit" translatable="false">Title</string>
    <string name="txtext" translatable="false">Text</string>
    <string name="txdate" translatable="false">Date</string>
    <string name="inftit" translatable="false">Road</string>
    <string name="inftex" translatable="false">Cut road</string>
    <string name="date">__/__/____</string>
    <string name="btguardar" translatable="false">Save</string>
    <string name="btremove" translatable="false">Delete</string>
    <string name="note" translatable="false">Notes</string>
    <string name="addnote" translatable="false">Add Note</string>
    <string name="editnote" translatable="false">Edit Note</string>
    <string name="lembrar" translatable="false">remember</string>
    <string name="title_activity_maps">Map</string>
    <string name="login_p" translatable="false">login_p</string>
    <string name="login_shared" translatable="false">login_shared</string>
    <string name="nome" translatable="false">nome</string>
    <string name="id_utl" translatable="false">id_utl</string>
    <string name="welcome" translatable="false">Welcome</string>
    <string name="maps" translatable="false">maps</string>
    <string name="report" translatable="false">Report</string>
    <string name="title_activity_maps2">Map</string>
    <string name="erro_login" translatable="false">Invalid</string>
    <string name="id_ut" translatable="false">id_ut</string>


</resources>