<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNota">

    <Button
        android:id="@+id/buttonsave"
        android:layout_width="135dp"
        android:layout_height="44dp"
        android:layout_marginTop="200dp"
        android:text="@string/btguardar"
        app:backgroundTint="#00B0FF"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textdate" />

    <Button
        android:id="@+id/button6"
        android:layout_width="135dp"
        android:layout_height="44dp"
        android:layout_marginTop="200dp"
        android:text="@string/btremove"
        app:backgroundTint="#00B0FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonsave"
        app:layout_constraintTop_toBottomOf="@+id/textdate" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textexto"
        android:layout_width="299dp"
        android:layout_height="44dp"
        android:hint="@string/inftex"
        android:textColorHighlight="#000000"
        android:textColorLink="#2196F3"
        android:textCursorDrawable="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textdate"
        android:layout_width="299dp"
        android:layout_height="44dp"
        android:hint="@string/date"
        android:textColorHighlight="#000000"
        android:textColorLink="#2196F3"
        android:textCursorDrawable="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="24dp"
        android:text="@string/txdate"
        android:textColor="#26B6FF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textexto" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="32dp"
        android:text="@string/txtit"
        android:textColor="#26B6FF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textitle"
        android:layout_width="299dp"
        android:layout_height="44dp"
        android:hint="@string/inftit"
        android:textColorHighlight="#000000"
        android:textColorLink="#2196F3"
        android:textCursorDrawable="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="24dp"
        android:text="@string/txtext"
        android:textColor="#26B6FF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textitle" />

</androidx.constraintlayout.widget.ConstraintLayout>